Add maven surefire plugin memory consume arguments.